--- a/styles/larger.css
+++ b/styles/larger.css
@@ -70,16 +70,21 @@
     }
 
     footer .student-info {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    footer .student-name {
         flex-direction: row;
         gap: 8px;
         align-items: center;
     }
     
     footer .flag-wrapper {
-        flex: 1;
-        display: flex;
         flex-direction: row;
         align-items: center;
+        padding: 0 10px;
     }
 
     footer .flag-wrapper .ph-flag {
